# Whitehelmet

./: .continue-here.md  .gitignore  .gitlab-ci.yml  .mcp.json  CLAUDE.md  GROUPBREAKDOWN.md  INSTRUCTIONS.md  PLAN.md  README.md  TECH_STACK.txt  VUE_MISSING_FROM_LEGACY_MVP.md  architecture-diagram.html  dev.sh  index.html  package-lock.json  package.json  screenshot.mjs  serve.mjs
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: authorization.py  config.py  dependencies.py  keycloak.py  rate_limit.py  rbac.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  consolidated_sheet.py  conversation.py  formula.py  organization.py  record.py  session.py  submission.py  template.py  template_assignment.py  template_version.py  uploaded_file.py  user.py
backend/app/schemas/: admin.py  ai.py  auth.py  files.py  formula.py  organizations.py  records.py  templates.py
backend/migrations/: env.py
backend/migrations/versions/: 72aae889c8cc_add_formulas_table.py  7bac4a8a6500_add_multi_tenant_tables.py  8b156d995e53_add_multi_tenant.py  93be113401bf_add_password_hash_to_users.py  a1b2c3d4e5f6_make_org_id_nullable.py  bf1ed8129b07_init_schema.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin.py  test_ai_new.py  test_assignments.py  test_organizations.py  test_templates.py
backend/tests/unit/: test_ai.py  test_auth.py  test_authorization.py  test_config.py  test_dependencies.py  test_files.py  test_formulas.py  test_health.py  test_keycloak.py  test_org_model.py  (+8 more)
(+194 files in other folders)
